--- a/frontend/.env
+++ b/frontend/.env
@@ -13,7 +13,7 @@ PORT=3000
 # ===========================================
 
 # Backend API URL
-REACT_APP_API_URL=http://localhost:8001
+REACT_APP_API_URL=https://chess-based-steganography.vercel.app/
 
 # ===========================================
 # BLOCKCHAIN CONFIGURATION
